; ModuleID = '/home/carl/AnghaBench/freebsd/libexec/rtld-elf/tests/extr_ld_library_pathfds.c_expect_missing_library.c'
source_filename = "/home/carl/AnghaBench/freebsd/libexec/rtld-elf/tests/extr_ld_library_pathfds.c_expect_missing_library.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.1 = private unnamed_addr constant [81 x i8] c"ld-elf.so.1: Shared object \22libpythagoras.so.0\22 not found, required by \22target\22\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @expect_missing_library to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @expect_missing_library(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca [2 x i8*], align 16
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = getelementptr inbounds [2 x i8*], [2 x i8*]* %5, i64 0, i64 0
  %7 = load i8*, i8** %4, align 8
  store i8* %7, i8** %6, align 8
  %8 = getelementptr inbounds i8*, i8** %6, i64 1
  store i8* null, i8** %8, align 8
  %9 = load i32, i32* %3, align 4
  %10 = getelementptr inbounds [2 x i8*], [2 x i8*]* %5, i64 0, i64 0
  %11 = call i32 @try_to_run(i32 %9, i32 1, i8** %10, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([81 x i8], [81 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @try_to_run(i32, i32, i8**, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
